--- a/src/css/App.css
+++ b/src/css/App.css
@@ -3,7 +3,12 @@ canvas {
   width: 500px;
   height: 500px;
 }
-
+code {
+  font-family: Consolas, "courier new";
+  color: crimson;
+  padding: 2px;
+  font-size: 50%;
+}
 .App {
   text-align: center;
 }
